# linparakeet

./: .gitignore  LICENSE  NOTICE.md  README.md  install.sh  linparakeet.desktop  main.py  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: ci.yml
app/: autostart.py  chime.py  clipboard.py  config.py  hotkey.py  pulse.py  recorder.py  settings_dialog.py  transcriber.py  tray.py
tests/: conftest.py  test_config.py  test_hotkey_parsing.py  test_pulse_parsing.py  test_transcriber_helpers.py
